--- a/sec/conclusion.tex
+++ b/sec/conclusion.tex
@@ -2,4 +2,8 @@
 
 \ldots
 
-Furture work: Grammar variational autoencoder - Using masking to ensure sampling only from valid production rules. Both the grammars and the generated sequences are small, it's unclear if it would scale. For arithmetic expressions, the grammar includes not just the structure of equations, but it enumerates all the valid inteegr values. \cc{TODO: study, write up}~\cite{Kusner2017}.
+Challenging many-core domain of OpenCL.
+
+Furture work: Grammar variational autoencoder - Using masking to ensure sampling only from valid production rules. Both the grammars and the generated sequences are small, it's unclear if it would scale. For arithmetic expressions, the grammar includes not just the structure of equations, but it enumerates all the valid inteegr values. \cc{could be used for middle-end targeting?}~\cite{Kusner2017}.
+
+Selective sampling to test isolated features.
