--- a/sec/motivation.tex
+++ b/sec/motivation.tex
@@ -62,6 +62,8 @@
 \end{figure}
 
 
+\cc{TODO: Probably get rid of this. Move example bugs into evaluation section}
+
 We motivate the case for compiler fuzzing through deep learning using three example of bugs found using DeepSmith: a miscompilation, a runtime crash, and a compiler crash.
 
 A common pattern in OpenCL is to obtain the thread identity, often as an \texttt{int}, and to compare this against some fixed value to determine whether or not to complete a unit of work. DeepSmith, having modeled the frequency with which this pattern occurs in real handwritten code, generates many programs containing permutations of this pattern. And in doing so, exposed an error in the optimizer of two of the Intel compilers we tested
