--- a/paper.tex
+++ b/paper.tex
@@ -11,7 +11,7 @@
 \lstset{language=[OpenCL]C}
 
 \input{sec/intro}
-\input{sec/motivation}
+% \input{sec/motivation}
 \input{sec/overview}
 \input{sec/deepsmith}
 \input{sec/methodology}
