--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -20,7 +20,7 @@ Optimizing compilers are large and complex programs, with a practically infinite
 
 % XSmith: It is difficult to create effective fuzzers for programming language compilers and interpreters because these systems have highly structured inputs, but it is important that such fuzzers exist. Programming language implementations are critical software infrastructure: defects in compilers and interpreters can potentially have great costs in terms of software correctness and reliability, human productivity, and computer security. This project seeks to reduce the time and human effort needed to create sophisticated fuzzers for programming language implementations. In so doing, this project is expected to advance the state of the art in random software testing, improve the quality of several programming language implementations selected for study, and produce new open-source software tools that programmers can use to develop new and more effective fuzz testers.
 
-Differential Testing is an effective and widely studied methodology for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005,Chen2013}. Figure~\ref{fig:difftest} shows the approach. A program and a set of inputs, henceforth referred to as a \emph{test case}, is compiled and executed multiple \emph{testbeds}. If any of the compilers crash or loop indefinitely, or if the output of the programs differs between compilers, then a potential bug has been discovered. \cc{TODO: Early work in context free grammar enumeration to text syntax analyzers~\cite{Purdom1972,Malloy2001}. These can't test past the compiler front-end. Early program generators~\cite{Zhao2009},\cite{Bryan2007}. Now, CSmith~\cite{Yang2011} and EMI testing~\cite{Le2013a} enable deeper, middle-end testing.}
+Differential Testing is an effective and widely studied methodology for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005,Chen2013}. Figure~\ref{fig:difftest} shows the approach. A program and a set of inputs, henceforth referred to as a \emph{test case}, is compiled and executed multiple \emph{testbeds}. If any of the compilers crash or loop indefinitely, or if the output of the programs differs between compilers, then a potential bug has been discovered. \cc{TODO: Early work in context free grammar enumeration to text syntax analyzers~\cite{Purdom1972,Malloy2001}. These can't test past the compiler front-end. Early program generators~\cite{Zhao2009},\cite{Bryan2007}. Now, CSmith~\cite{Yang2011} and EMI testing~\cite{Le2013a} enable deeper, middle-end testing. The behavior of compilers under invalid inputs is --- to the best of our knowledge --- much less explored topic.}
 
 A probabilistic grammar is used to enumerate a large, random program, which is then compiled and executed across a number of compilers. In this manner, CSmith~\cite{Yang2011}, a random program generator for the C programming language, has been used to identify hundreds of bugs in compilers. CSmith defines a probabilistic grammar over a large subset of the C programming language, and recursively instantiates a program, using rigorous and conservative static and dynamic analysis to ensure that programs are free from undefined behavior.
 
