--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -18,7 +18,7 @@
 \noindent
 Optimizing compilers are large and complex programs, with a practically infinite scope of possible inputs. Fixed test-suites are inadequate for ensuring correct behavior over such a range of inputs, and the lack of formal specifications for sections of compilers renders formal verification unusable beyond isolated subcomponents. \cc{Not true, CompCert!} Yet, compilers are a fundamental trusted technology, and identifying their bugs is of critical importance.
 
-\cc{}
+\cc{TODO: define fuzzing}
 
 % XSmith: It is difficult to create effective fuzzers for programming language compilers and interpreters because these systems have highly structured inputs, but it is important that such fuzzers exist. Programming language implementations are critical software infrastructure: defects in compilers and interpreters can potentially have great costs in terms of software correctness and reliability, human productivity, and computer security. This project seeks to reduce the time and human effort needed to create sophisticated fuzzers for programming language implementations. In so doing, this project is expected to advance the state of the art in random software testing, improve the quality of several programming language implementations selected for study, and produce new open-source software tools that programmers can use to develop new and more effective fuzz testers.
 
@@ -26,17 +26,17 @@ Differential Testing is an effective and widely studied methodology for identify
 
 A probabilistic grammar is used to enumerate a large, random program, which is then compiled and executed across a number of compilers. In this manner, CSmith~\cite{Yang2011}, a random program generator for the C programming language, has been used to identify hundreds of bugs in compilers. CSmith defines a probabilistic grammar over a large subset of the C programming language, and recursively instantiates a program, using rigorous and conservative static and dynamic analysis to ensure that programs are free from undefined behavior.
 
-Developing a random program generation is a huge undertaking, requiring a thorough understanding of the target programming language --- CSmith was developed over the course of years, and consists of over 40k lines of handwritten C++ code. By tightly coupling the generation logic with the target programming language, each feature of the grammar must be painstakingly and expertly engineered, and is accompanied by exponential costs in developing the static and dynamic safety checks to ensure that generated programs remain free from (or at least, are likely free from) undefined behavior. For example, lifting CSmith from C to OpenCL~\cite{Lidbury2015a} took 9 months and 8k lines of code. As such, typically only a subset of the language is implemented, and the expressiveness of the grammar is bounded by the limits of static and dynamic analysis. \cc{exhaustive testing is impossible - requiring enumeration of every sequence of characters, but grammar enumeration leaves too many bugs on the table.? }
+\cc{where it starts to get interesting} Developing a random program generation is a huge undertaking, requiring a thorough understanding of the target programming language --- CSmith was developed over the course of years, and consists of over 40k lines of handwritten C++ code. By tightly coupling the generation logic with the target programming language, each feature of the grammar must be painstakingly and expertly engineered, and is accompanied by exponential costs in developing the static and dynamic safety checks to ensure that generated programs remain free from (or at least, are likely free from) undefined behavior. For example, lifting CSmith from C to OpenCL~\cite{Lidbury2015a} took 9 months and 8k lines of code. As such, typically only a subset of the language is implemented, and the expressiveness of the grammar is bounded by the limits of static and dynamic analysis. \cc{exhaustive testing is impossible - requiring enumeration of every sequence of characters, but grammar enumeration leaves too many bugs on the table.? }
 % --- to date, important language features such as strings, dynamic memory allocation, function pointers, and recursion are unsupported.
 % , despite the large overlap between C and OpenCL (which is C with extensions). This huge development cost is extended to the reduction tools too, with CLReduce~\cite{Pflanzer2016} requiring extensions to OCLgrind.
 
 \cc{What is needed\ldots}
 
-We present a novel, data-driven approach to the generation of random programs for compiler fuzzing. Using a corpus of handwritten code in a particular programming language, we use deep neural networks to automatically construct probabilistic models for how humans write programs. The neural networks, without prior knowledge, infer both the syntax and semantics of the programming language, and the common constructs and patterns. By framing the generation of random programs as a language modeling problem, we greatly simplify the process of program generation, and the expressiveness of generated programs is limited only by what is contained in the corpus. Such corpuses can readily be assembled from open source repositories.
+We present a novel, data-driven approach to the generation of random programs for compiler fuzzing. Using a corpus of handwritten code in a particular programming language, we use deep neural networks to automatically construct probabilistic models for how humans write programs. The neural networks, without prior knowledge, infer both the syntax and semantics of the programming language, and the common constructs and patterns. By framing the generation of random programs as a language modeling problem, we greatly simplify the process of program generation, and the expressiveness of generated programs is limited only by what is contained in the corpus. Such a corpus can readily be assembled from open source repositories.
 
 \cc{TODO: syntactic modeling trade-off}
 
-Our implementation, DeepSmith, targets OpenCL, an open standard for programming heterogeneous systems, though our approach is language agnostic. We chose OpenCL for three reasons: it is an emerging standard with the challenging promise of portability across a diverse range of heterogeneous hardware; OpenCL is compiled ``online'', meaning that compiler defects may not be discovered until a product is deployed to customers; and OpenCL is a hard programming language to test --- the data-parallel programming model increases the complexity of static and dynamic analysis, further limiting the expressiveness of grammar-based approaches.
+Our implementation, DeepSmith, targets OpenCL, an open standard for programming heterogeneous systems, though our approach is language agnostic. We chose OpenCL for three reasons: it is an emerging standard with the challenging promise of portability across a diverse range of heterogeneous hardware; OpenCL is compiled ``online'', meaning that compiler defects may not be discovered until a product is deployed to customers; and OpenCL is a hard programming language to test \cc{DELETE ME, not ``hard''} --- the data-parallel programming model increases the complexity of static and dynamic analysis, further limiting the expressiveness of grammar-based approaches.
 
 %The importance of sane compiler behavior is amplified for OpenCL since it is compiled online. OpenCL code is shipped by developers to customers for compilation online. OpenCL is increasingly used in safety critical software products such as automotive vision. Segmentation faults and other runtime crashes during online compilation can disrupt the execution of safety critical processes.
 %
@@ -70,6 +70,7 @@ Our implementation, DeepSmith, targets OpenCL, an open standard for programming 
 % \noindent
 We make the following contributions:
 %
+\cc{Check against abstract"}
 \begin{itemize}
 \item A novel, data-drive approach for the generation of expressive random programs for compiler fuzzing. DeepSmith \emph{infers} programming language use from real-world examples in order to generate plausible compiler test cases; % CLSmith requires expert-driven development for every language feature supported. 40+k lines of C++ vs a few hundred lines of Python.
 \item through syntactic modeling of handwritten program code we discover bugs in compilers which the grammar-based approaches cannot, covering more components of the compiler;
