--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -11,6 +11,7 @@
   % \vspace{-2em}%
   \caption{%
     Differential testing a single test case across multiple testbeds. A test case consists of a program source and its runtime parameters and data. % Outcomes may be the output of the program execution, a compiler crash, a runtime crash, or a timeout error.%
+    \cc{delete me}
   }%
   \label{fig:difftest}
 \end{figure}
