--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -20,6 +20,8 @@ Analysis of bugs in GCC and LLVM finds 80\% of test cases to be 45 lines~\cite{S
 
 \cc{TODO:} Directed EMI testing~\cite{Le2015}.
 
+\cc{TODO: finding arithmetic bugs which CSmith cannot~\cite{Nagai2013}}
+
 ``As a matter of implementation quality, a compiler vendor will usually fix a segmentation fault or similar problem even if the crash-inducing test case, for example, uses a variable without initialization.''~\cite{Regehr2012a}
 
 Skeletal program enumeration~\cite{Zhang2016a}. By enumerating entire program space, provides bounded guarantees of compiler correctness. Same shortcoming as CSmith (well formed programs only). No OpenCL implementation. Probably would take a lot of development effort. \cc{More investigation required.}
