--- a/abstract.tex
+++ b/abstract.tex
@@ -3,11 +3,11 @@
 
 % Our approach complements the desires of compiler developers, who desire small test cases based on ``plausible'' language constructs.
 
-Compilers should always produce correct code for valid inputs and meaningful errors for invalid inputs. Failure to do so can hinder software development or even cause catastrophic runtime errors. Due to the complexity of modern compilers, properly testing them is hard. Manually assembled test-suites cannot cover the enormous range of possible inputs. Random program generators can but they require extensive development effort and they are limited 
+Compilers should always produce correct code for valid inputs and meaningful errors for invalid inputs. Failure to do so can hinder software development or even cause catastrophic runtime errors. Still, properly testing compilers is hard. Manually assembled test suites cannot cover the enormous range of possible inputs. Random program generators can but only after extensive development effort. Expert developers need to define algorithmically how correct and plausible code is structured and this effort needs to be repeated almost from scratch for every language supported by the compiler.
 
-Compilers should produce correct code for valid inputs, and produce meaningful errors when inputs are invalid. Fixed test-suites and formal verification techniques cannot ensure these properties over the enormous range of possible inputs and complexity of optimizing compilers, leading to the development of random program generators that attempt to find compiler bugs by comparing the outputs of programs across compilers.
+%Compilers should produce correct code for valid inputs, and produce meaningful errors when inputs are invalid. Fixed test-suites and formal verification techniques cannot ensure these properties over the enormous range of possible inputs and complexity of optimizing compilers, leading to the development of random program generators that attempt to find compiler bugs by comparing the outputs of programs across compilers.
 
-Grammar-based random program generators require extensive development effort, and by design, yield large, ``implausible''  programs which bare little resemblance to actual real code written by human programmers. This is in contrast to the needs of compiler developers, who desire small test cases which are symptomatic of  ``plausible'' use cases. What is needed is a technique for biasing the production of random program generation such that they more closely resemble real handwritten code, and which expose bugs which are likely to arise from common use cases.
+%Grammar-based random program generators require extensive development effort, and by design, yield large, ``implausible''  programs which bare little resemblance to actual real code written by human programmers. This is in contrast to the needs of compiler developers, who desire small test cases which are symptomatic of  ``plausible'' use cases. What is needed is a technique for biasing the production of random program generation such that they more closely resemble real handwritten code, and which expose bugs which are likely to arise from common use cases.
 
 % Furthermore, extensive effort is expended on minimizing the risk of undefined behavior, which comes at the cost of reduced expressiveness.
 
