--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -692,7 +692,7 @@ Table~\ref{tab:classifications} shows the results of applying voting heuristics 
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/runtimes}%
 	\caption{%
-		Runtimes, excluding timeouts. On average, DeepSmith test cases are evaluated $XX\times$ faster than CLSmith ($2.45\times$, $4.46\times$, and $66.54\times$ for generation, execution and reduction, respectively).%
+		Runtimes, excluding timeouts. On average, DeepSmith test cases are evaluated $3.03\times$ faster than CLSmith ($2.45\times$, and $4.46\times$ for generation and execution, respectively).%
 %    Total speedup is 3.03x
 %    CLgen generation is 2.45x faster than CLSmith
 %    CLgen execution is 4.46x faster than CLSmith
