--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -534,7 +534,7 @@ The hardest false-positive to prevent was division by zero and related mathemati
   \centering %
   \input{build/tab/clang-asserts}
   \caption{%
-    Distinct clang front assertions.%
+    Distinct clang front assertions, and the number of distinct unreachables.%
   }
   \label{tab:clang-asserts}
 \end{table}
